--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,9 +7,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>{% block title %} Anime Ocean Api {% endblock %}</title>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+            scroll-behavior: smooth;
+            text-decoration: none;
+            list-style: none;
+            box-sizing: border-box;
+            letter-spacing: 1px;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
         .small{
             font-size: 0.876rem;
             color: #4b4b4b;
+        }
+        body{
+            background: #4b4b4b;
+            color: black;
+        }
+        h1, h2{
+            color: #00ff55;
         }
     </style>
 </head>
