--- a/templates/images/all_images.html
+++ b/templates/images/all_images.html
@@ -6,7 +6,9 @@ Anime Ocean Api's
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto:wght@500&display=swap');
-
+    body{
+        margin-top: 2em;
+    }
     h1 {
         font-family: 'Work Sans', sans-serif;
         font-weight: 600;
@@ -33,50 +35,31 @@ Anime Ocean Api's
         font-size: 14px;
     }
 </style>
-<div class="container" style="max-width: 1240px;">
-    <div class="row pt-5">
-        <div class="col-12 col-md-6">
-            <section class="jumbotron bg-white">
-                <div class="container">
-                    <h1 class="pt-4"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-card-image"
-                            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M14.5 3h-13a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z" />
-                            <path
-                                d="M10.648 7.646a.5.5 0 0 1 .577-.093L15.002 9.5V13h-14v-1l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71z" />
-                            <path fill-rule="evenodd" d="M4.502 7a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
-                        </svg> Anime Ocean Api
-                    </h1>
-                    <p class="h4">Image API Placeholders.</p>
-                    <p class="text-muted">
-                        Find a list of the images <a href="">here</a>
-                    </p>
-                </div>
-            </section>
-        </div>
-        <div class=" d-none d-md-none d-md-block col-md-6">
-            <section class="jumbotron text-center bg-white px-0">
-                <div class="container">
-                    <img class="shadow mb-5 bg-white rounded" src="" width="100%">
-                </div>
-            </section>
-        </div>
-    </div>
-</div>
+
 <section class="jumbotron text-center">
     <div class="container" style="max-width: 600px;">
-        <h1 class="txt-robo h1">Easy to use placeholders</h1>
-        <p>Just find an image and create a URL, not quite implemented width and height yet!</p>
+        <h1 class="txt-robo h1">ALL images</h1>
+        <p>Here you can find all the images with their id</p>
 
-        <pre class="bg-white pt-3"><code><a href="">https://127.0.0.1:8000/api/id/2</a></code>
-        </pre>
 
     </div>
 </section>
 <div class="container">
     <div class="py-5">
         <div class="row">
-            
+            {% for post in object_list %}
+            <div class="col-md-4">
+                <a href="{{post.get_absolute_url}}" class="text-dark">
+                    <div class="card mb-4 shadow mb-5 rounded">
+                        <img src="{{post.image.url}}" alt="{{post.title}}" class="card-img-top">
+                        <div class="card-body d-flex justify-content-between">
+                            <p>{{post.title|truncatechars:50}}</p>
+                            <p>#{{post.id}}</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
